# lianyhaii

./: .gitignore  LICENSE  README.md  feature_tools.py  metrics.py  model.py  req.txt  setup.cfg  setup.py
example/: run_demo.py  time_series_demo.py
example/BIYE/: 显著性搜索.py
example/competition_solution/: zhaohang_B.md  zhaohang_B.py
example/sohu2022/: sohu2022.md  train.py
lianyhaii/: TimeSeries_FE.py  __init__.py  base_model.py  eda_tool.py  fe_selector.py  feature_tools.py  metrics.py  model.py  reg_model.py  tools.py
lianyhaii.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
